css/design.less
/**
 * codologic CSS
 *
 * @link     http://codologic.com
 * 
 * Author: Avinash D'Silva <avinash.roshan.dsilva@gmail.com|codologic.com>
 * 
 * Previous Authors:
 * @author   Anika Henke <anika@selfthinker.org>
 * @author   Clarence Lee <clarencedglee@gmail.com>
 * @license  GPL 2 (http://www.gnu.org/licenses/gpl.html)
 */


#dokuwiki__header {
    .headings,
    .tools {
        margin-bottom: 1em;
;
        width: 49%;
    }
    .tools {
        margin-top: .2em;
    }

    h1 {
        margin: 0;
        font-size: 1.5em;
        font-weight: normal;

        img {
            float: left;
            margin-right: .5em;
        }

        span {
            display: block;
            padding-top: 10px;
        }

        a {
            text-decoration: none;
            color: @ini_text;
            background-color: inherit;
        }
    }

    p.claim {
        margin-bottom: 0;
        font-size: 0.875em;
    }
    span.support-link {
        float: right;
        padding: 1em;
        text-decoration: underline;
    }
}

[dir=rtl] #dokuwiki__header h1 img {
    float: right;
    margin-left: .5em;
    margin-right: 0;
}

/* tools
********************************************************************/

/* highlight selected tool */
.mode_admin a.action.admin,
.mode_login a.action.login,
.mode_register a.action.register,
.mode_profile a.action.profile,
.mode_recent a.action.recent,
.mode_index a.action.index,
.mode_media a.action.media,
.mode_revisions a.action.revs,
.mode_backlink a.action.backlink,
.mode_subscribe a.action.subscribe {
    font-weight: bold;
}

#dokuwiki__header .tools {
    ul {
        padding-left: 0;
        margin-bottom: 0;
    }

    li {
        font-size: 0.875em;
        margin-left: 1em;
        list-style: none;
        display: inline;
    }

    form.search div.ajax_qsearch li {
        font-size: 1em;
        margin-left: 0;
        display: block;
        overflow: hidden;
       
        text-overflow: ellipsis;
    }
}

[dir=rtl] #dokuwiki__header .tools li {
    margin-right: 1em;
    margin-left: 0;
}

#dokuwiki__usertools a.action {
    padding-left: 20px;
    background: transparent url(images/usertools.png) no-repeat 0 0;
}

[dir=rtl] #dokuwiki__usertools a.action {
    padding-left: 0;
    padding-right: 20px;
}

[dir=rtl] #IE7 #dokuwiki__usertools a.action {
    display: inline-block;
}

#dokuwiki__header .mobileTools {
    display: none; /* hide mobile tools dropdown to only show in mobile view */
}

/*____________ user tools ____________*/

#dokuwiki__usertools {
    position: absolute;
    top: .5em;
    right: .5em;
    text-align: right;
    width: 100%;

    ul {
        margin: 0 auto;
        padding: 0;
        max-width: @ini_site_width;
    }

    a.action.admin {
        background-position: left 0;
    }

    a.action.profile {
        background-position: left -32px;
    }

    a.action.register {
        background-position: left -64px;
    }

    a.action.login {
        background-position: left -96px;
    }

    a.action.logout {
        background-position: left -128px;
    }
}

[dir=rtl] #dokuwiki__usertools {
    text-align: left;
    left: 40px;
    right: auto;

    a.action.admin {
        background-position: right 0;
    }

    a.action.profile {
        background-position: right -32px;
    }

    a.action.register {
        background-position: right -64px;
    }

    a.action.login {
        background-position: right -96px;
    }

    a.action.logout {
        background-position: right -128px;
    }
}

/*____________ site tools ____________*/

#dokuwiki__sitetools {
    text-align: left;

    form.search {
        display: block;
        font-size: 0.875em;
        position: relative;
        margin-bottom: 1.5em;

        input.edit {
            width: 19em;
            border-radius:12px;
            outline:none;
            
            padding: .5em 22px .35em .1em;
            padding-left:25px;
        }
        
          .ajax_qsearch{
        display:none;
        position:static;
        margin-top:12px;
        background: #FFFFFF;
            ul{
            text-align:right;
            
                a{color:#2b73b7;}
            }
        }
        button {
            background: transparent url(images/search.png) no-repeat 0 0;
            border-width: 0;
            width: 19px;
            height: 14px;
            text-indent: -99999px;
            margin-left: -18.5em;
            box-shadow: none;
            padding: 0;
        }  
    }

    ul {
       margin-top: 0.5em;
    }
     
}

[dir=rtl] #dokuwiki__sitetools {
    text-align: left;

    form.search {
        input.edit {
            padding: .35em .1em .35em 22px;
        }
        button {
            background-position: 5px 0;
            margin-left: 0;
            margin-right: -20px;
            position: relative;
        }
    }
}

#IE7 #dokuwiki__sitetools form.search {
    min-height: 1px;
    z-index: 21;
}

/*____________ testspace.help.template ______________*/
#dokuwiki__site {
    max-width: 1200px;
}
/* ... */

